--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,12 @@
 services:
+    mailpit:
+        image: axllent/mailpit
+        container_name: mailpit
+        ports:
+            - 8025:8025
+            - 1025:1025
+        networks:
+            - sail
     laravel.test:
         build:
             context: './vendor/laravel/sail/runtimes/8.4'
