--- a/.env.example
+++ b/.env.example
@@ -58,4 +58,5 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
-
+REMINDERS_MAX_RETRIES=3
+REMINDERS_RETRY_DELAY_MINUTES=10
